cmake_minimum_required(VERSION 3.1...3.12)

if(${CMAKE_VERSION} VERSION_LESS 3.12)
    cmake_policy(VERSION ${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION})
endif()

project(vim LANGUAGES C)

add_executable(vim
	"src/alloc.h"
	"src/arabic.c"
	"src/arabic.h"
	"src/ascii.h"
	"src/blowfish.c"
	"src/buffer.c"
	"src/channel.c"
	"src/charset.c"
	"src/crypt.c"
	"src/crypt_zip.c"
	"src/dict.c"
	"src/diff.c"
	"src/digraph.c"
	"src/dlldata.c"
	"src/dosinst.c"
	"src/dosinst.h"
	"src/edit.c"
	"src/eval.c"
	"src/evalfunc.c"
	"src/ex_cmdidxs.h"
	"src/ex_cmds.c"
	"src/ex_cmds.h"
	"src/ex_cmds2.c"
	"src/ex_docmd.c"
	"src/ex_eval.c"
	"src/ex_getln.c"
	"src/farsi.c"
	"src/farsi.h"
	"src/feature.h"
	"src/fileio.c"
	"src/fold.c"
	"src/getchar.c"
	"src/glbl_ime.h"
	"src/globals.h"
	"src/hangulin.c"
	"src/hardcopy.c"
	"src/hashtab.c"
	"src/if_cscope.c"
	"src/if_cscope.h"
	"src/if_lua.c"
	"src/if_mzsch.c"
	"src/if_mzsch.h"
	"src/if_ole.h"
	"src/if_perl_msvc/stdbool.h"
	"src/if_perlsfio.c"
	"src/if_py_both.h"
	"src/if_python.c"
	"src/if_python3.c"
	"src/if_ruby.c"
	"src/if_tcl.c"
	"src/if_xcmdsrv.c"
	"src/iid_ole.c"
	"src/integration.c"
	"src/integration.h"
	"src/iscygpty.c"
	"src/iscygpty.h"
	"src/json.c"
	"src/json_test.c"
	"src/keymap.h"
	"src/kword_test.c"
	"src/libvterm/bin/unterm.c"
	"src/libvterm/bin/vterm-ctrl.c"
	"src/libvterm/bin/vterm-dump.c"
	"src/libvterm/include/vterm.h"
	"src/libvterm/include/vterm_keycodes.h"
	"src/libvterm/src/encoding.c"
	"src/libvterm/src/keyboard.c"
	"src/libvterm/src/mouse.c"
	"src/libvterm/src/parser.c"
	"src/libvterm/src/pen.c"
	"src/libvterm/src/rect.h"
	"src/libvterm/src/screen.c"
	"src/libvterm/src/state.c"
	"src/libvterm/src/unicode.c"
	"src/libvterm/src/utf8.h"
	"src/libvterm/src/vterm.c"
	"src/libvterm/src/vterm_internal.h"
	"src/libvterm/t/harness.c"
	"src/list.c"
	"src/macros.h"
	"src/main.c"
	"src/mark.c"
	"src/mbyte.c"
	"src/memfile.c"
	"src/memfile_test.c"
	"src/memline.c"
	"src/menu.c"
	"src/message.c"
	"src/message_test.c"
	"src/misc1.c"
	"src/misc2.c"
	"src/move.c"
	"src/nbdebug.c"
	"src/nbdebug.h"
	"src/netbeans.c"
	"src/normal.c"
	"src/ops.c"
	"src/option.c"
	"src/option.h"
	"src/os_amiga.c"
	"src/os_amiga.h"
	"src/os_beos.c"
	"src/os_beos.h"
	"src/os_dos.h"
	"src/os_mac.h"
	"src/os_mac_conv.c"
	"src/os_mint.h"
	"src/os_mswin.c"
	"src/os_qnx.c"
	"src/os_qnx.h"
	"src/os_unix.c"
	"src/os_unix.h"
	"src/os_unixx.h"
	"src/os_vms.c"
	"src/os_vms_conf.h"
	"src/os_vms_mms.c"
	"src/os_w32dll.c"
	"src/os_w32exe.c"
	"src/os_win32.c"
	"src/os_win32.h"
	"src/po/sjiscorr.c"
	"src/popupmnu.c"
	"src/proto.h"
	"src/pty.c"
	"src/quickfix.c"
	"src/regexp.c"
	"src/regexp.h"
	"src/regexp_nfa.c"
	"src/screen.c"
	"src/search.c"
	"src/sha256.c"
	"src/spell.c"
	"src/spell.h"
	"src/spellfile.c"
	"src/structs.h"
	"src/syntax.c"
	"src/tag.c"
	"src/tee/tee.c"
	"src/term.c"
	"src/term.h"
	"src/terminal.c"
	"src/termlib.c"
	"src/ui.c"
	"src/undo.c"
	"src/uninstal.c"
	"src/userfunc.c"
	"src/version.c"
	"src/version.h"
	"src/vim.h"
	"src/vimio.h"
	"src/vimrun.c"
	"src/winclip.c"
	"src/window.c"
	"src/workshop.c"
	"src/workshop.h"
	"src/wsdebug.c"
	"src/wsdebug.h"
	"src/xpm/include/simx.h"
	"src/xpm/include/xpm.h"
	"src/xpm_w32.c"
	"src/xpm_w32.h"
	"src/xxd/xxd.c"
)

set_target_properties(vim PROPERTIES
        C_STANDARD 11
        C_STANDARD_REQUIRED ON
        C_EXTENSIONS OFF)
